Avoid duplicating editors too often.

It was duplicating editors even if an editor for a document was already
available in the view, if that editor wasn't currently on top.

Task-number: QTCREATORBUG-11395
Change-Id: I89a2d5ef0285d8aa34642567fbf122a98e87e75e
Reviewed-by: Eike Ziller <eike.ziller@digia.com>